# pdwn

./: .biomeignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  index.html  lefthook.yml  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml  security.yml
scripts/: check-i18n.ts  sync-integration-dataset.ts  update-release-data.mjs
src/: api.ts  i18n.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  contextual.rs  db.rs  integration_dataset_tests.rs  lib.rs  main.rs  pii.rs  scanner.rs  scheduler.rs  secrets.rs  settings.rs  tray.rs  type_catalog.rs  types.rs  user_values.rs  watcher.rs  zip_inspect.rs
src-tauri/tests/data/: integration_dataset.jsonl
src-tauri/types/: base.yaml  fr.yaml
src-tauri/types/custom/: fr.yaml
src/content/: about.md  legal.md  third-party-notices.md
src/locales/: ar.json  de.json  en.json  es.json  fr.json
website/: app.js  index.html  styles.css
website/data/: release.json
