[package]
name = "pdwn"
version = "0.1.0"
description = "Desktop tool to detect personal data in downloads"
authors = ["badreddine"]
license = "AGPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pdwn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
notify = "6"
dirs = "5"
libsql = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
once_cell = "1"
calamine = "0.33"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
blake3 = "1"
getrandom = "0.3"
trash = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pdf-extract = "0.7"
walkdir = "2"
